--- a/WebshopFrontend/Razor/Pages/Product/Product.razor
+++ b/WebshopFrontend/Razor/Pages/Product/Product.razor
@@ -1,5 +1,5 @@
 ﻿@page "/product/{ArtNr}"
-@inject IApiSevice WebshopApiService
+@inject IApiService WebshopApiService
 
 @if (_errorMessage is not null)
 {
