--- a/WebshopFrontend/Razor/Pages/Products/Products.razor
+++ b/WebshopFrontend/Razor/Pages/Products/Products.razor
@@ -1,5 +1,5 @@
 ﻿@page "/products"
-@inject IApiSevice WebshopApiService
+@inject IApiService WebshopApiService
 
 <PageTitle>Products</PageTitle>
 <PageHeading>Products</PageHeading>
