Added profile page

--- a/WebshopFrontend/Razor/Components/UserDetailsForm.razor
+++ b/WebshopFrontend/Razor/Components/UserDetailsForm.razor
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="form-flex-item">
-                    <ValidationMessage For="@(() => UserDetails.FirstName)" />
+                    <ValidationMessage For="@(() => UserDetails.FirstName)" class="text-red" />
                 </div>
             </div>
 
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="form-flex-item">
-                    <ValidationMessage For="@(() => UserDetails.LastName)" />
+                    <ValidationMessage For="@(() => UserDetails.LastName)" class="text-red" />
                 </div>
             </div>
 
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="form-flex-item">
-                    <ValidationMessage For="@(() => UserDetails.Address.Country)" />
+                    <ValidationMessage For="@(() => UserDetails.Address.Country)" class="text-red" />
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="form-flex-item">
-                    <ValidationMessage For="@(() => UserDetails.Address.City)" />
+                    <ValidationMessage For="@(() => UserDetails.Address.City)" class="text-red" />
                 </div>
             </div>
 
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="form-flex-item">
-                    <ValidationMessage For="@(() => UserDetails.Address.Street)" />
+                    <ValidationMessage For="@(() => UserDetails.Address.Street)" class="text-red" />
                 </div>
             </div>
 
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="form-flex-item">
-                    <ValidationMessage For="@(() => UserDetails.Address.PostalCode)" />
+                    <ValidationMessage For="@(() => UserDetails.Address.PostalCode)" class="text-red" />
                 </div>
             </div>
 
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class="form-flex-item">
-                    <ValidationMessage For="@(() => UserDetails.PhoneNumber)" />
+                    <ValidationMessage For="@(() => UserDetails.PhoneNumber)" class="text-red" />
                 </div>
             </div>
         </div>
