--- a/WebshopFrontend/Razor/Components/AddToCartButton.razor
+++ b/WebshopFrontend/Razor/Components/AddToCartButton.razor
@@ -11,34 +11,57 @@
     [CascadingParameter] private Task<AuthenticationState>? AuthenticationState { get; set; }
     [Parameter] public required ProductDto Product { get; set; }
 
-    private string _cartId = string.Empty;
-
-    private const int QuantityToAdd = 1;
-
     private async Task AddToCart()
     {
-        _cartId = await GetCartId();
-        var cartItem = await CartService.AddItem(Product, QuantityToAdd, _cartId);
-        if (cartItem.Id != 0) CartCounterService.AddToCount(QuantityToAdd);
+        if (Product.Stock.Quantity <= 0) return;
+
+        var cartId = await GetCartId();
+
+        await CartService.AddItem(Product, 1, cartId);
+        CartCounterService.AddToCount(1);
     }
 
-    private string GetButtonText() => Product.Stock.Quantity > 0 ? "Buy" : "Reserve";
+    private string GetButtonText()
+    {
+        if (Product.Stock.Quantity > 0)
+        {
+            return "Add to cart";
+        }
+
+        if (Product.Stock is { Quantity: 0, NextRestock: not null })
+        {
+            return "Reserve";
+        }
+
+        return "Out of stock";
+    }
 
     private string GetButtonClasses()
     {
-        const string defaultClasses = "text-center text-xlarge text-bold button-cart";
-        var addedClass = Product.Stock.Quantity > 0 ? " button-color-green" : " button-color-yellow";
+        const string defaultClasses = "text-center text-large button-cart";
 
-        return defaultClasses + addedClass;
+        if (Product.Stock.Quantity > 0)
+        {
+            return defaultClasses + " button-color-green";
+        }
+
+        if (Product.Stock is { Quantity: 0, NextRestock: not null })
+        {
+            return defaultClasses + " button-color-yellow";
+        }
+
+        return defaultClasses + " button-color-red";
     }
 
     private async Task<string> GetCartId()
     {
         if (AuthenticationState == null) return string.Empty;
+
         var authState = await AuthenticationState;
 
         if (authState.User.Identity is not null && authState.User.Identity.IsAuthenticated)
             return authState.User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value ?? string.Empty;
+
         return string.Empty;
     }
 }
