--- a/WebshopFrontend/wwwroot/css/specific.css
+++ b/WebshopFrontend/wwwroot/css/specific.css
@@ -39,6 +39,15 @@
         background-color: rgb(255, 145, 0);
     }
 
+.button-color-red {
+    background-color: rgb(255, 0, 0);
+    color: white;
+}
+
+    .button-color-red:hover {
+        background-color: rgb(235, 0, 0);
+    }
+
 .cart-badge {
     padding: 2px 5px 2px 5px;
 }
@@ -243,7 +252,7 @@
 }
 
 .user-details-table {
-    width: 50%;
+    width: 100%;
     background: white;
     text-align: left;
     border-collapse: collapse;
@@ -262,14 +271,6 @@
     .user-details-table th, .user-details-table td {
         border-bottom: 1px solid #d9d9d9;
     }
-
-
-@media (min-width: 420px) {
-    .product-flex-item {
-        flex-basis: 50%;
-        max-width: 50%;
-    }
-}
 
 @media screen and (max-width: 600px) {
 
@@ -300,6 +301,13 @@
         }
 }
 
+@media (min-width: 420px) {
+    .product-flex-item {
+        flex-basis: 50%;
+        max-width: 50%;
+    }
+}
+
 @media (min-width: 768px) {
     .form-flex-row {
         flex-direction: row;
@@ -322,6 +330,10 @@
     .product-flex-item {
         flex-basis: 33.333%;
         max-width: 33.333%;
+    }
+
+    .user-details-table {
+        width: 50%;
     }
 }
 
