--- a/WebshopFrontend/Razor/Components/Price.razor
+++ b/WebshopFrontend/Razor/Components/Price.razor
@@ -24,7 +24,7 @@
 
         if (Product.Price.Discount != null)
         {
-            _regularStyle = $"font-size: {FontSizePx - (FontSizePx/2)}px;";
+            _regularStyle = $"font-size: {FontSizePx/2}px;";
         }
     }
     
