--- a/WebshopFrontend/Razor/App.razor
+++ b/WebshopFrontend/Razor/App.razor
@@ -24,6 +24,5 @@
 </html>
 
 @code {
-    private static readonly IComponentRenderMode InteractiveServerWithoutPrerendering =
-        new InteractiveServerRenderMode(prerender: false);
+    private static readonly IComponentRenderMode InteractiveServerWithoutPrerendering = new InteractiveServerRenderMode(prerender: false);
 }
