Added create database script

--- a/WebshopFrontend/Razor/Layout/TopMenu.razor
+++ b/WebshopFrontend/Razor/Layout/TopMenu.razor
@@ -1,10 +1,10 @@
 ﻿<div class="text-xlarge top-menu">
     <div class="padding-x">
-        LOGO
+        The Board Room
     </div>
 
     <div class="top-menu-search padding-x">
-        SEARCH
+        
     </div>
 
     <ExchangeRateSelector/>
