--- a/WebshopFrontend/Razor/App.razor
+++ b/WebshopFrontend/Razor/App.razor
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="@Assets["css/specific.css"]" />
     <link rel="stylesheet" href="@Assets["css/productgrid.css"]" />
     <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="@Assets["WebshopFrontend.styles.css"]" />
     <ImportMap />
     <HeadOutlet />
+    <PageTitle>The Board Room</PageTitle>
 </head>
 
 <body>
