--- a/WebshopFrontend/Razor/Components/RegisterBox.razor
+++ b/WebshopFrontend/Razor/Components/RegisterBox.razor
@@ -12,13 +12,6 @@
             }
             else
             {
-                <ul>
-                    @foreach (var error in _registerLoginResponseDto.ErrorList)
-                    {
-                        <li class="red">@error</li>
-                    }
-                </ul>
-
                 <EditForm Model="RegisterUserDto" OnValidSubmit="RegisterUser" FormName="RegisterUser" Context="registerFormContext">
                     <DataAnnotationsValidator />
 
@@ -61,6 +54,15 @@
                         Register
                     </button>
                 </EditForm>
+                <div class="padding-y">
+                    <ul class="text-red error-list">
+                        @foreach (var error in _registerLoginResponseDto.ErrorList)
+                        {
+                            <li>@error</li>
+                        }
+                    </ul>
+                </div>
+               
             }
         </NotAuthorized>
     </AuthorizeView>
