--- a/WebshopFrontend/wwwroot/css/general.css
+++ b/WebshopFrontend/wwwroot/css/general.css
@@ -46,6 +46,15 @@
     max-width: 1200px;
 }
 
+.error-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+    .error-list li {
+        margin-bottom: 8px;
+    }
+
 .flex-row {
     display: flex;
     flex-direction: row;
